# projectmap-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/projectmap_ai/: app.py  config.py
src/projectmap_ai/core/: __init__.py  json_exporter.py  scanner.py  stats.py  tree_builder.py
src/projectmap_ai/ui/: __init__.py  qt_app.py  tkinter_app.py
src/projectmap_ai/utils/: __init__.py  path_utils.py
tests/: test_scanner.py
